<resources>
    <string name="app_name">Digitalt studiekort</string>
    <string name="username_hint">Brugernavn</string>
    <string name="invalid_username">Ikke gyldigt brugernavn</string>
    <string name="invalid_password">Ikke tom adgangskode</string>
    <string name="password"><adgangskode>Adgangskode</adgangskode></string>
    <string name="btn_login">Login</string>
    <string name="error_login">"Fejl i brugernavn eller adgangskode"</string>
    <string name="already_signedin">You are now done with login. Move to your real MainActivity</string>
    <string name="title_activity_enable_biometric_login">Enable BiometricLogin</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="btn_authorize">Authorize</string>
    <string name="prompt_info_title">App Authentication</string>
    <string name="title_content_activity">Studiekort</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_description">App is using Android biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="secret_key_name">biometric_sample_encryption_key</string>
    <string name="lorem">Lorem</string>
    <string name="use_biometrics">Use biometrics</string>
    <string name="oglogo">OGlogo</string>
    <string name="logout">Logout</string>
    <string name="barcode">barcode</string>
    <string name="user_class_format">Klasse: %s</string>
    <string name="user_birthday">Fødselsdag: %s</string>
    <string name="user_balance">Saldo: %s DDK</string>
</resources>